@@ -10,6 +10,7 @@ V.Next
 - [PATCH] Passing span context to AuthorizationActivity (#2209)
 - [MINOR] Bumping Moshi versions; force setting Okio version (#2210)
 - [PATCH] Fix to generate new Asymmetric Key (#2222)
+- [MINOR] Move addition of passkey header from BaseController to WebView fragment (#2237)
 
 V.16.1.1
 ----------
